--- a/index.html
+++ b/index.html
@@ -83,17 +83,11 @@
 <body>
   <header><a href="/">{ elliotec }</a></header>
   <div class="main">
-    <h2><a style="color:#bdc3c7" href='/hn-no-reason'> A Hacker News Reader For No Reason </a></h2>
+    <h2><a style="color:#bdc3c7" href='/'>Hacker News Reader</a></h2>
     <div id="hn"></div>
     <div class="copyright">
       <a style="color:#bdc3c7; font-size:18px;" href="https://elliotec.com/a-hacker-news-reader-for-no-reason">
         <em>Read the post about building this</em></a><p>&copy; Elliotec Software LLC</p></div>
   <script type="text/javascript" src="main.js"></script>
-  <script type="text/javascript">
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-46276194-3', 'elliotec.com'); ga('send', 'pageview');</script>
 </body>
 </html>
