Added new CSV, with more fields.

--- a/index.html
+++ b/index.html
@@ -81,13 +81,14 @@
   </style>
 </head>
 <body>
-  <header><a href="/">{ elliotec }</a></header>
+  <header><a href="/">inspired by { elliotec }</a></header>
   <div class="main">
     <h2><a style="color:#bdc3c7" href='/'>Hacker News Reader</a></h2>
     <div id="hn"></div>
     <div class="copyright">
       <a style="color:#bdc3c7; font-size:18px;" href="https://elliotec.com/a-hacker-news-reader-for-no-reason">
-        <em>Read the post about building this</em></a><p>&copy; Elliotec Software LLC</p></div>
+        <em>Read the post about building this</em></a><br />
+		<a style="color:#bdc3c7; font-size:18px;" href="https://github.com/HackerNews/API"><em>Hacker News API</em></a><p>Portions &copy; Elliotec Software LLC</p></div>
   <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
